srcef/analizador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> printInst PTCOMA
Rule 5     instruccion -> asignacion PTCOMA
Rule 6     instruccion -> accesoAsignacion PTCOMA
Rule 7     instruccion -> structs PTCOMA
Rule 8     instruccion -> ifInst PTCOMA
Rule 9     instruccion -> whileInst PTCOMA
Rule 10    instruccion -> forInst PTCOMA
Rule 11    instruccion -> continueInst PTCOMA
Rule 12    instruccion -> breakInst PTCOMA
Rule 13    instruccion -> funcionDecl PTCOMA
Rule 14    instruccion -> llamadaExp PTCOMA
Rule 15    instruccion -> returnInst PTCOMA
Rule 16    llamadaExp -> ID PARIZQ paramExp PARDER
Rule 17    llamadaExp -> ID PARIZQ PARDER
Rule 18    llamadaExp -> PARSE PARIZQ tipo COMA expresion PARDER
Rule 19    llamadaExp -> TRUNC PARIZQ tipo COMA expresion PARDER
Rule 20    llamadaExp -> STRINGFUNC PARIZQ expresion PARDER
Rule 21    paramExp -> paramExp COMA expresion
Rule 22    paramExp -> expresion
Rule 23    funcionDecl -> FUNCTION ID PARIZQ paramsDecl PARDER bloque END
Rule 24    funcionDecl -> FUNCTION ID PARIZQ PARDER bloque END
Rule 25    paramsDecl -> paramsDecl COMA paramDl
Rule 26    paramsDecl -> paramDl
Rule 27    paramDl -> ID DOSPUNTOS DOSPUNTOS tipo
Rule 28    paramDl -> ID
Rule 29    returnInst -> RETURN expresion
Rule 30    printInst -> PRINT PARIZQ paramExp PARDER
Rule 31    printInst -> PRINTLN PARIZQ paramExp PARDER
Rule 32    asignacion -> ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
Rule 33    asignacion -> ID IGUAL expresion
Rule 34    accesoAsignacion -> acceso IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
Rule 35    accesoAsignacion -> acceso IGUAL expresion
Rule 36    tipo -> TINT64
Rule 37    tipo -> TFLOAT64
Rule 38    tipo -> TSTRING
Rule 39    tipo -> TBOOL
Rule 40    tipo -> TCHAR
Rule 41    tipo -> TNULO
Rule 42    tipo -> ID
Rule 43    structs -> MUTABLE STRUCT ID atributos END
Rule 44    structs -> STRUCT ID atributos END
Rule 45    atributos -> atributos atributo
Rule 46    atributos -> atributo
Rule 47    atributo -> ID DOSPUNTOS DOSPUNTOS tipo PTCOMA
Rule 48    atributo -> ID PTCOMA
Rule 49    arreglo -> CORIZQ paramExp CORDER
Rule 50    arreglo -> ID listaIndices
Rule 51    listaIndices -> listaIndices indice
Rule 52    listaIndices -> indice
Rule 53    indice -> CORIZQ expresion CORDER
Rule 54    rango -> expresion DOSPUNTOS expresion
Rule 55    rango -> BEGIN DOSPUNTOS expresion
Rule 56    rango -> expresion DOSPUNTOS END
Rule 57    rango -> BEGIN DOSPUNTOS END
Rule 58    acceso -> acceso PUNTO acceso
Rule 59    acceso -> ID PUNTO ID
Rule 60    acceso -> arreglo PUNTO arreglo
Rule 61    acceso -> arreglo PUNTO ID
Rule 62    acceso -> ID PUNTO arreglo
Rule 63    acceso -> ID
Rule 64    acceso -> arreglo
Rule 65    bloque -> instrucciones
Rule 66    ifInst -> IF expresion bloque END
Rule 67    ifInst -> IF expresion bloque ELSE bloque END
Rule 68    ifInst -> IF expresion bloque elseIfInst END
Rule 69    elseIfInst -> ELSEIF expresion bloque
Rule 70    elseIfInst -> ELSEIF expresion bloque ELSE bloque
Rule 71    elseIfInst -> ELSEIF expresion bloque elseIfInst
Rule 72    whileInst -> WHILE expresion bloque END
Rule 73    forInst -> FOR ID IN expresion bloque END
Rule 74    continueInst -> CONTINUE
Rule 75    breakInst -> BREAK
Rule 76    expresion -> expresion MAS expresion
Rule 77    expresion -> expresion MENOS expresion
Rule 78    expresion -> expresion POR expresion
Rule 79    expresion -> expresion DIVIDIDO expresion
Rule 80    expresion -> expresion POTENCIA expresion
Rule 81    expresion -> expresion MODULO expresion
Rule 82    expresion -> expresion MAYOR expresion
Rule 83    expresion -> expresion MENOR expresion
Rule 84    expresion -> expresion MAYIGUAL expresion
Rule 85    expresion -> expresion MENIGUAL expresion
Rule 86    expresion -> expresion IGUALDAD expresion
Rule 87    expresion -> expresion DISTINTO expresion
Rule 88    expresion -> expresion AND expresion
Rule 89    expresion -> expresion OR expresion
Rule 90    expresion -> MENOS expresion
Rule 91    expresion -> NOT expresion
Rule 92    expresion -> PARIZQ expresion PARDER
Rule 93    expresion -> ENTERO
Rule 94    expresion -> DECIMAL
Rule 95    expresion -> STRING
Rule 96    expresion -> CHAR
Rule 97    expresion -> TRUE
Rule 98    expresion -> FALSE
Rule 99    expresion -> NOTHING
Rule 100   expresion -> rango
Rule 101   expresion -> acceso
Rule 102   expresion -> llamadaExp

Terminals, with rules where they appear

AND                  : 88
BEGIN                : 55 57
BREAK                : 75
CHAR                 : 96
COMA                 : 18 19 21 25
CONTINUE             : 74
CORDER               : 49 53
CORIZQ               : 49 53
DECIMAL              : 94
DISTINTO             : 87
DIVIDIDO             : 79
DOSPUNTOS            : 27 27 32 32 34 34 47 47 54 55 56 57
ELSE                 : 67 70
ELSEIF               : 69 70 71
END                  : 23 24 43 44 56 57 66 67 68 72 73
ENTERO               : 93
FALSE                : 98
FOR                  : 73
FUNCTION             : 23 24
ID                   : 16 17 23 24 27 28 32 33 42 43 44 47 48 50 59 59 61 62 63 73
IF                   : 66 67 68
IGUAL                : 32 33 34 35
IGUALDAD             : 86
IN                   : 73
MAS                  : 76
MAYIGUAL             : 84
MAYOR                : 82
MENIGUAL             : 85
MENOR                : 83
MENOS                : 77 90
MODULO               : 81
MUTABLE              : 43
NOT                  : 91
NOTHING              : 99
OR                   : 89
PARDER               : 16 17 18 19 20 23 24 30 31 92
PARIZQ               : 16 17 18 19 20 23 24 30 31 92
PARSE                : 18
POR                  : 78
POTENCIA             : 80
PRINT                : 30
PRINTLN              : 31
PTCOMA               : 4 5 6 7 8 9 10 11 12 13 14 15 47 48
PUNTO                : 58 59 60 61 62
RETURN               : 29
STRING               : 95
STRINGFUNC           : 20
STRUCT               : 43 44
TBOOL                : 39
TCHAR                : 40
TFLOAT64             : 37
TINT64               : 36
TNULO                : 41
TRUE                 : 97
TRUNC                : 19
TSTRING              : 38
WHILE                : 72
error                : 

Nonterminals, with rules where they appear

acceso               : 34 35 58 58 101
accesoAsignacion     : 6
arreglo              : 60 60 61 62 64
asignacion           : 5
atributo             : 45 46
atributos            : 43 44 45
bloque               : 23 24 66 67 67 68 69 70 70 71 72 73
breakInst            : 12
continueInst         : 11
elseIfInst           : 68 71
expresion            : 18 19 20 21 22 29 32 33 34 35 53 54 54 55 56 66 67 68 69 70 71 72 73 76 76 77 77 78 78 79 79 80 80 81 81 82 82 83 83 84 84 85 85 86 86 87 87 88 88 89 89 90 91 92
forInst              : 10
funcionDecl          : 13
ifInst               : 8
indice               : 51 52
instruccion          : 2 3
instrucciones        : 1 2 65
listaIndices         : 50 51
llamadaExp           : 14 102
paramDl              : 25 26
paramExp             : 16 21 30 31 49
paramsDecl           : 23 25
printInst            : 4
rango                : 100
returnInst           : 15
start                : 0
structs              : 7
tipo                 : 18 19 27 32 34 47
whileInst            : 9

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . printInst PTCOMA
    (5) instruccion -> . asignacion PTCOMA
    (6) instruccion -> . accesoAsignacion PTCOMA
    (7) instruccion -> . structs PTCOMA
    (8) instruccion -> . ifInst PTCOMA
    (9) instruccion -> . whileInst PTCOMA
    (10) instruccion -> . forInst PTCOMA
    (11) instruccion -> . continueInst PTCOMA
    (12) instruccion -> . breakInst PTCOMA
    (13) instruccion -> . funcionDecl PTCOMA
    (14) instruccion -> . llamadaExp PTCOMA
    (15) instruccion -> . returnInst PTCOMA
    (30) printInst -> . PRINT PARIZQ paramExp PARDER
    (31) printInst -> . PRINTLN PARIZQ paramExp PARDER
    (32) asignacion -> . ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (33) asignacion -> . ID IGUAL expresion
    (34) accesoAsignacion -> . acceso IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (35) accesoAsignacion -> . acceso IGUAL expresion
    (43) structs -> . MUTABLE STRUCT ID atributos END
    (44) structs -> . STRUCT ID atributos END
    (66) ifInst -> . IF expresion bloque END
    (67) ifInst -> . IF expresion bloque ELSE bloque END
    (68) ifInst -> . IF expresion bloque elseIfInst END
    (72) whileInst -> . WHILE expresion bloque END
    (73) forInst -> . FOR ID IN expresion bloque END
    (74) continueInst -> . CONTINUE
    (75) breakInst -> . BREAK
    (23) funcionDecl -> . FUNCTION ID PARIZQ paramsDecl PARDER bloque END
    (24) funcionDecl -> . FUNCTION ID PARIZQ PARDER bloque END
    (16) llamadaExp -> . ID PARIZQ paramExp PARDER
    (17) llamadaExp -> . ID PARIZQ PARDER
    (18) llamadaExp -> . PARSE PARIZQ tipo COMA expresion PARDER
    (19) llamadaExp -> . TRUNC PARIZQ tipo COMA expresion PARDER
    (20) llamadaExp -> . STRINGFUNC PARIZQ expresion PARDER
    (29) returnInst -> . RETURN expresion
    (58) acceso -> . acceso PUNTO acceso
    (59) acceso -> . ID PUNTO ID
    (60) acceso -> . arreglo PUNTO arreglo
    (61) acceso -> . arreglo PUNTO ID
    (62) acceso -> . ID PUNTO arreglo
    (63) acceso -> . ID
    (64) acceso -> . arreglo
    (49) arreglo -> . CORIZQ paramExp CORDER
    (50) arreglo -> . ID listaIndices

    PRINT           shift and go to state 16
    PRINTLN         shift and go to state 17
    ID              shift and go to state 18
    MUTABLE         shift and go to state 20
    STRUCT          shift and go to state 21
    IF              shift and go to state 22
    WHILE           shift and go to state 23
    FOR             shift and go to state 24
    CONTINUE        shift and go to state 25
    BREAK           shift and go to state 26
    FUNCTION        shift and go to state 27
    PARSE           shift and go to state 28
    TRUNC           shift and go to state 29
    STRINGFUNC      shift and go to state 30
    RETURN          shift and go to state 31
    CORIZQ          shift and go to state 33

    start                          shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    printInst                      shift and go to state 4
    asignacion                     shift and go to state 5
    accesoAsignacion               shift and go to state 6
    structs                        shift and go to state 7
    ifInst                         shift and go to state 8
    whileInst                      shift and go to state 9
    forInst                        shift and go to state 10
    continueInst                   shift and go to state 11
    breakInst                      shift and go to state 12
    funcionDecl                    shift and go to state 13
    llamadaExp                     shift and go to state 14
    returnInst                     shift and go to state 15
    acceso                         shift and go to state 19
    arreglo                        shift and go to state 32

state 1

    (0) S' -> start .



state 2

    (1) start -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . printInst PTCOMA
    (5) instruccion -> . asignacion PTCOMA
    (6) instruccion -> . accesoAsignacion PTCOMA
    (7) instruccion -> . structs PTCOMA
    (8) instruccion -> . ifInst PTCOMA
    (9) instruccion -> . whileInst PTCOMA
    (10) instruccion -> . forInst PTCOMA
    (11) instruccion -> . continueInst PTCOMA
    (12) instruccion -> . breakInst PTCOMA
    (13) instruccion -> . funcionDecl PTCOMA
    (14) instruccion -> . llamadaExp PTCOMA
    (15) instruccion -> . returnInst PTCOMA
    (30) printInst -> . PRINT PARIZQ paramExp PARDER
    (31) printInst -> . PRINTLN PARIZQ paramExp PARDER
    (32) asignacion -> . ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (33) asignacion -> . ID IGUAL expresion
    (34) accesoAsignacion -> . acceso IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (35) accesoAsignacion -> . acceso IGUAL expresion
    (43) structs -> . MUTABLE STRUCT ID atributos END
    (44) structs -> . STRUCT ID atributos END
    (66) ifInst -> . IF expresion bloque END
    (67) ifInst -> . IF expresion bloque ELSE bloque END
    (68) ifInst -> . IF expresion bloque elseIfInst END
    (72) whileInst -> . WHILE expresion bloque END
    (73) forInst -> . FOR ID IN expresion bloque END
    (74) continueInst -> . CONTINUE
    (75) breakInst -> . BREAK
    (23) funcionDecl -> . FUNCTION ID PARIZQ paramsDecl PARDER bloque END
    (24) funcionDecl -> . FUNCTION ID PARIZQ PARDER bloque END
    (16) llamadaExp -> . ID PARIZQ paramExp PARDER
    (17) llamadaExp -> . ID PARIZQ PARDER
    (18) llamadaExp -> . PARSE PARIZQ tipo COMA expresion PARDER
    (19) llamadaExp -> . TRUNC PARIZQ tipo COMA expresion PARDER
    (20) llamadaExp -> . STRINGFUNC PARIZQ expresion PARDER
    (29) returnInst -> . RETURN expresion
    (58) acceso -> . acceso PUNTO acceso
    (59) acceso -> . ID PUNTO ID
    (60) acceso -> . arreglo PUNTO arreglo
    (61) acceso -> . arreglo PUNTO ID
    (62) acceso -> . ID PUNTO arreglo
    (63) acceso -> . ID
    (64) acceso -> . arreglo
    (49) arreglo -> . CORIZQ paramExp CORDER
    (50) arreglo -> . ID listaIndices

    $end            reduce using rule 1 (start -> instrucciones .)
    PRINT           shift and go to state 16
    PRINTLN         shift and go to state 17
    ID              shift and go to state 18
    MUTABLE         shift and go to state 20
    STRUCT          shift and go to state 21
    IF              shift and go to state 22
    WHILE           shift and go to state 23
    FOR             shift and go to state 24
    CONTINUE        shift and go to state 25
    BREAK           shift and go to state 26
    FUNCTION        shift and go to state 27
    PARSE           shift and go to state 28
    TRUNC           shift and go to state 29
    STRINGFUNC      shift and go to state 30
    RETURN          shift and go to state 31
    CORIZQ          shift and go to state 33

    instruccion                    shift and go to state 34
    printInst                      shift and go to state 4
    asignacion                     shift and go to state 5
    accesoAsignacion               shift and go to state 6
    structs                        shift and go to state 7
    ifInst                         shift and go to state 8
    whileInst                      shift and go to state 9
    forInst                        shift and go to state 10
    continueInst                   shift and go to state 11
    breakInst                      shift and go to state 12
    funcionDecl                    shift and go to state 13
    llamadaExp                     shift and go to state 14
    returnInst                     shift and go to state 15
    acceso                         shift and go to state 19
    arreglo                        shift and go to state 32

state 3

    (3) instrucciones -> instruccion .

    PRINT           reduce using rule 3 (instrucciones -> instruccion .)
    PRINTLN         reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    MUTABLE         reduce using rule 3 (instrucciones -> instruccion .)
    STRUCT          reduce using rule 3 (instrucciones -> instruccion .)
    IF              reduce using rule 3 (instrucciones -> instruccion .)
    WHILE           reduce using rule 3 (instrucciones -> instruccion .)
    FOR             reduce using rule 3 (instrucciones -> instruccion .)
    CONTINUE        reduce using rule 3 (instrucciones -> instruccion .)
    BREAK           reduce using rule 3 (instrucciones -> instruccion .)
    FUNCTION        reduce using rule 3 (instrucciones -> instruccion .)
    PARSE           reduce using rule 3 (instrucciones -> instruccion .)
    TRUNC           reduce using rule 3 (instrucciones -> instruccion .)
    STRINGFUNC      reduce using rule 3 (instrucciones -> instruccion .)
    RETURN          reduce using rule 3 (instrucciones -> instruccion .)
    CORIZQ          reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    END             reduce using rule 3 (instrucciones -> instruccion .)
    ELSE            reduce using rule 3 (instrucciones -> instruccion .)
    ELSEIF          reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> printInst . PTCOMA

    PTCOMA          shift and go to state 35


state 5

    (5) instruccion -> asignacion . PTCOMA

    PTCOMA          shift and go to state 36


state 6

    (6) instruccion -> accesoAsignacion . PTCOMA

    PTCOMA          shift and go to state 37


state 7

    (7) instruccion -> structs . PTCOMA

    PTCOMA          shift and go to state 38


state 8

    (8) instruccion -> ifInst . PTCOMA

    PTCOMA          shift and go to state 39


state 9

    (9) instruccion -> whileInst . PTCOMA

    PTCOMA          shift and go to state 40


state 10

    (10) instruccion -> forInst . PTCOMA

    PTCOMA          shift and go to state 41


state 11

    (11) instruccion -> continueInst . PTCOMA

    PTCOMA          shift and go to state 42


state 12

    (12) instruccion -> breakInst . PTCOMA

    PTCOMA          shift and go to state 43


state 13

    (13) instruccion -> funcionDecl . PTCOMA

    PTCOMA          shift and go to state 44


state 14

    (14) instruccion -> llamadaExp . PTCOMA

    PTCOMA          shift and go to state 45


state 15

    (15) instruccion -> returnInst . PTCOMA

    PTCOMA          shift and go to state 46


state 16

    (30) printInst -> PRINT . PARIZQ paramExp PARDER

    PARIZQ          shift and go to state 47


state 17

    (31) printInst -> PRINTLN . PARIZQ paramExp PARDER

    PARIZQ          shift and go to state 48


state 18

    (32) asignacion -> ID . IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (33) asignacion -> ID . IGUAL expresion
    (16) llamadaExp -> ID . PARIZQ paramExp PARDER
    (17) llamadaExp -> ID . PARIZQ PARDER
    (59) acceso -> ID . PUNTO ID
    (62) acceso -> ID . PUNTO arreglo
    (63) acceso -> ID .
    (50) arreglo -> ID . listaIndices
    (51) listaIndices -> . listaIndices indice
    (52) listaIndices -> . indice
    (53) indice -> . CORIZQ expresion CORDER

  ! shift/reduce conflict for IGUAL resolved as shift
  ! shift/reduce conflict for PUNTO resolved as shift
    IGUAL           shift and go to state 49
    PARIZQ          shift and go to state 50
    PUNTO           shift and go to state 51
    CORIZQ          shift and go to state 54

  ! IGUAL           [ reduce using rule 63 (acceso -> ID .) ]
  ! PUNTO           [ reduce using rule 63 (acceso -> ID .) ]

    listaIndices                   shift and go to state 52
    indice                         shift and go to state 53

state 19

    (34) accesoAsignacion -> acceso . IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (35) accesoAsignacion -> acceso . IGUAL expresion
    (58) acceso -> acceso . PUNTO acceso

    IGUAL           shift and go to state 55
    PUNTO           shift and go to state 56


state 20

    (43) structs -> MUTABLE . STRUCT ID atributos END

    STRUCT          shift and go to state 57


state 21

    (44) structs -> STRUCT . ID atributos END

    ID              shift and go to state 58


state 22

    (66) ifInst -> IF . expresion bloque END
    (67) ifInst -> IF . expresion bloque ELSE bloque END
    (68) ifInst -> IF . expresion bloque elseIfInst END
    (76) expresion -> . expresion MAS expresion
    (77) expresion -> . expresion MENOS expresion
    (78) expresion -> . expresion POR expresion
    (79) expresion -> . expresion DIVIDIDO expresion
    (80) expresion -> . expresion POTENCIA expresion
    (81) expresion -> . expresion MODULO expresion
    (82) expresion -> . expresion MAYOR expresion
    (83) expresion -> . expresion MENOR expresion
    (84) expresion -> . expresion MAYIGUAL expresion
    (85) expresion -> . expresion MENIGUAL expresion
    (86) expresion -> . expresion IGUALDAD expresion
    (87) expresion -> . expresion DISTINTO expresion
    (88) expresion -> . expresion AND expresion
    (89) expresion -> . expresion OR expresion
    (90) expresion -> . MENOS expresion
    (91) expresion -> . NOT expresion
    (92) expresion -> . PARIZQ expresion PARDER
    (93) expresion -> . ENTERO
    (94) expresion -> . DECIMAL
    (95) expresion -> . STRING
    (96) expresion -> . CHAR
    (97) expresion -> . TRUE
    (98) expresion -> . FALSE
    (99) expresion -> . NOTHING
    (100) expresion -> . rango
    (101) expresion -> . acceso
    (102) expresion -> . llamadaExp
    (54) rango -> . expresion DOSPUNTOS expresion
    (55) rango -> . BEGIN DOSPUNTOS expresion
    (56) rango -> . expresion DOSPUNTOS END
    (57) rango -> . BEGIN DOSPUNTOS END
    (58) acceso -> . acceso PUNTO acceso
    (59) acceso -> . ID PUNTO ID
    (60) acceso -> . arreglo PUNTO arreglo
    (61) acceso -> . arreglo PUNTO ID
    (62) acceso -> . ID PUNTO arreglo
    (63) acceso -> . ID
    (64) acceso -> . arreglo
    (16) llamadaExp -> . ID PARIZQ paramExp PARDER
    (17) llamadaExp -> . ID PARIZQ PARDER
    (18) llamadaExp -> . PARSE PARIZQ tipo COMA expresion PARDER
    (19) llamadaExp -> . TRUNC PARIZQ tipo COMA expresion PARDER
    (20) llamadaExp -> . STRINGFUNC PARIZQ expresion PARDER
    (49) arreglo -> . CORIZQ paramExp CORDER
    (50) arreglo -> . ID listaIndices

    MENOS           shift and go to state 60
    NOT             shift and go to state 61
    PARIZQ          shift and go to state 62
    ENTERO          shift and go to state 63
    DECIMAL         shift and go to state 64
    STRING          shift and go to state 65
    CHAR            shift and go to state 66
    TRUE            shift and go to state 67
    FALSE           shift and go to state 68
    NOTHING         shift and go to state 69
    BEGIN           shift and go to state 73
    ID              shift and go to state 74
    PARSE           shift and go to state 28
    TRUNC           shift and go to state 29
    STRINGFUNC      shift and go to state 30
    CORIZQ          shift and go to state 33

    expresion                      shift and go to state 59
    rango                          shift and go to state 70
    acceso                         shift and go to state 71
    llamadaExp                     shift and go to state 72
    arreglo                        shift and go to state 32

state 23

    (72) whileInst -> WHILE . expresion bloque END
    (76) expresion -> . expresion MAS expresion
    (77) expresion -> . expresion MENOS expresion
    (78) expresion -> . expresion POR expresion
    (79) expresion -> . expresion DIVIDIDO expresion
    (80) expresion -> . expresion POTENCIA expresion
    (81) expresion -> . expresion MODULO expresion
    (82) expresion -> . expresion MAYOR expresion
    (83) expresion -> . expresion MENOR expresion
    (84) expresion -> . expresion MAYIGUAL expresion
    (85) expresion -> . expresion MENIGUAL expresion
    (86) expresion -> . expresion IGUALDAD expresion
    (87) expresion -> . expresion DISTINTO expresion
    (88) expresion -> . expresion AND expresion
    (89) expresion -> . expresion OR expresion
    (90) expresion -> . MENOS expresion
    (91) expresion -> . NOT expresion
    (92) expresion -> . PARIZQ expresion PARDER
    (93) expresion -> . ENTERO
    (94) expresion -> . DECIMAL
    (95) expresion -> . STRING
    (96) expresion -> . CHAR
    (97) expresion -> . TRUE
    (98) expresion -> . FALSE
    (99) expresion -> . NOTHING
    (100) expresion -> . rango
    (101) expresion -> . acceso
    (102) expresion -> . llamadaExp
    (54) rango -> . expresion DOSPUNTOS expresion
    (55) rango -> . BEGIN DOSPUNTOS expresion
    (56) rango -> . expresion DOSPUNTOS END
    (57) rango -> . BEGIN DOSPUNTOS END
    (58) acceso -> . acceso PUNTO acceso
    (59) acceso -> . ID PUNTO ID
    (60) acceso -> . arreglo PUNTO arreglo
    (61) acceso -> . arreglo PUNTO ID
    (62) acceso -> . ID PUNTO arreglo
    (63) acceso -> . ID
    (64) acceso -> . arreglo
    (16) llamadaExp -> . ID PARIZQ paramExp PARDER
    (17) llamadaExp -> . ID PARIZQ PARDER
    (18) llamadaExp -> . PARSE PARIZQ tipo COMA expresion PARDER
    (19) llamadaExp -> . TRUNC PARIZQ tipo COMA expresion PARDER
    (20) llamadaExp -> . STRINGFUNC PARIZQ expresion PARDER
    (49) arreglo -> . CORIZQ paramExp CORDER
    (50) arreglo -> . ID listaIndices

    MENOS           shift and go to state 60
    NOT             shift and go to state 61
    PARIZQ          shift and go to state 62
    ENTERO          shift and go to state 63
    DECIMAL         shift and go to state 64
    STRING          shift and go to state 65
    CHAR            shift and go to state 66
    TRUE            shift and go to state 67
    FALSE           shift and go to state 68
    NOTHING         shift and go to state 69
    BEGIN           shift and go to state 73
    ID              shift and go to state 74
    PARSE           shift and go to state 28
    TRUNC           shift and go to state 29
    STRINGFUNC      shift and go to state 30
    CORIZQ          shift and go to state 33

    expresion                      shift and go to state 75
    rango                          shift and go to state 70
    acceso                         shift and go to state 71
    llamadaExp                     shift and go to state 72
    arreglo                        shift and go to state 32

state 24

    (73) forInst -> FOR . ID IN expresion bloque END

    ID              shift and go to state 76


state 25

    (74) continueInst -> CONTINUE .

    PTCOMA          reduce using rule 74 (continueInst -> CONTINUE .)


state 26

    (75) breakInst -> BREAK .

    PTCOMA          reduce using rule 75 (breakInst -> BREAK .)


state 27

    (23) funcionDecl -> FUNCTION . ID PARIZQ paramsDecl PARDER bloque END
    (24) funcionDecl -> FUNCTION . ID PARIZQ PARDER bloque END

    ID              shift and go to state 77


state 28

    (18) llamadaExp -> PARSE . PARIZQ tipo COMA expresion PARDER

    PARIZQ          shift and go to state 78


state 29

    (19) llamadaExp -> TRUNC . PARIZQ tipo COMA expresion PARDER

    PARIZQ          shift and go to state 79


state 30

    (20) llamadaExp -> STRINGFUNC . PARIZQ expresion PARDER

    PARIZQ          shift and go to state 80


state 31

    (29) returnInst -> RETURN . expresion
    (76) expresion -> . expresion MAS expresion
    (77) expresion -> . expresion MENOS expresion
    (78) expresion -> . expresion POR expresion
    (79) expresion -> . expresion DIVIDIDO expresion
    (80) expresion -> . expresion POTENCIA expresion
    (81) expresion -> . expresion MODULO expresion
    (82) expresion -> . expresion MAYOR expresion
    (83) expresion -> . expresion MENOR expresion
    (84) expresion -> . expresion MAYIGUAL expresion
    (85) expresion -> . expresion MENIGUAL expresion
    (86) expresion -> . expresion IGUALDAD expresion
    (87) expresion -> . expresion DISTINTO expresion
    (88) expresion -> . expresion AND expresion
    (89) expresion -> . expresion OR expresion
    (90) expresion -> . MENOS expresion
    (91) expresion -> . NOT expresion
    (92) expresion -> . PARIZQ expresion PARDER
    (93) expresion -> . ENTERO
    (94) expresion -> . DECIMAL
    (95) expresion -> . STRING
    (96) expresion -> . CHAR
    (97) expresion -> . TRUE
    (98) expresion -> . FALSE
    (99) expresion -> . NOTHING
    (100) expresion -> . rango
    (101) expresion -> . acceso
    (102) expresion -> . llamadaExp
    (54) rango -> . expresion DOSPUNTOS expresion
    (55) rango -> . BEGIN DOSPUNTOS expresion
    (56) rango -> . expresion DOSPUNTOS END
    (57) rango -> . BEGIN DOSPUNTOS END
    (58) acceso -> . acceso PUNTO acceso
    (59) acceso -> . ID PUNTO ID
    (60) acceso -> . arreglo PUNTO arreglo
    (61) acceso -> . arreglo PUNTO ID
    (62) acceso -> . ID PUNTO arreglo
    (63) acceso -> . ID
    (64) acceso -> . arreglo
    (16) llamadaExp -> . ID PARIZQ paramExp PARDER
    (17) llamadaExp -> . ID PARIZQ PARDER
    (18) llamadaExp -> . PARSE PARIZQ tipo COMA expresion PARDER
    (19) llamadaExp -> . TRUNC PARIZQ tipo COMA expresion PARDER
    (20) llamadaExp -> . STRINGFUNC PARIZQ expresion PARDER
    (49) arreglo -> . CORIZQ paramExp CORDER
    (50) arreglo -> . ID listaIndices

    MENOS           shift and go to state 60
    NOT             shift and go to state 61
    PARIZQ          shift and go to state 62
    ENTERO          shift and go to state 63
    DECIMAL         shift and go to state 64
    STRING          shift and go to state 65
    CHAR            shift and go to state 66
    TRUE            shift and go to state 67
    FALSE           shift and go to state 68
    NOTHING         shift and go to state 69
    BEGIN           shift and go to state 73
    ID              shift and go to state 74
    PARSE           shift and go to state 28
    TRUNC           shift and go to state 29
    STRINGFUNC      shift and go to state 30
    CORIZQ          shift and go to state 33

    expresion                      shift and go to state 81
    rango                          shift and go to state 70
    acceso                         shift and go to state 71
    llamadaExp                     shift and go to state 72
    arreglo                        shift and go to state 32

state 32

    (60) acceso -> arreglo . PUNTO arreglo
    (61) acceso -> arreglo . PUNTO ID
    (64) acceso -> arreglo .

  ! shift/reduce conflict for PUNTO resolved as shift
    PUNTO           shift and go to state 82
    IGUAL           reduce using rule 64 (acceso -> arreglo .)
    MAS             reduce using rule 64 (acceso -> arreglo .)
    MENOS           reduce using rule 64 (acceso -> arreglo .)
    POR             reduce using rule 64 (acceso -> arreglo .)
    DIVIDIDO        reduce using rule 64 (acceso -> arreglo .)
    POTENCIA        reduce using rule 64 (acceso -> arreglo .)
    MODULO          reduce using rule 64 (acceso -> arreglo .)
    MAYOR           reduce using rule 64 (acceso -> arreglo .)
    MENOR           reduce using rule 64 (acceso -> arreglo .)
    MAYIGUAL        reduce using rule 64 (acceso -> arreglo .)
    MENIGUAL        reduce using rule 64 (acceso -> arreglo .)
    IGUALDAD        reduce using rule 64 (acceso -> arreglo .)
    DISTINTO        reduce using rule 64 (acceso -> arreglo .)
    AND             reduce using rule 64 (acceso -> arreglo .)
    OR              reduce using rule 64 (acceso -> arreglo .)
    DOSPUNTOS       reduce using rule 64 (acceso -> arreglo .)
    PRINT           reduce using rule 64 (acceso -> arreglo .)
    PRINTLN         reduce using rule 64 (acceso -> arreglo .)
    ID              reduce using rule 64 (acceso -> arreglo .)
    MUTABLE         reduce using rule 64 (acceso -> arreglo .)
    STRUCT          reduce using rule 64 (acceso -> arreglo .)
    IF              reduce using rule 64 (acceso -> arreglo .)
    WHILE           reduce using rule 64 (acceso -> arreglo .)
    FOR             reduce using rule 64 (acceso -> arreglo .)
    CONTINUE        reduce using rule 64 (acceso -> arreglo .)
    BREAK           reduce using rule 64 (acceso -> arreglo .)
    FUNCTION        reduce using rule 64 (acceso -> arreglo .)
    PARSE           reduce using rule 64 (acceso -> arreglo .)
    TRUNC           reduce using rule 64 (acceso -> arreglo .)
    STRINGFUNC      reduce using rule 64 (acceso -> arreglo .)
    RETURN          reduce using rule 64 (acceso -> arreglo .)
    CORIZQ          reduce using rule 64 (acceso -> arreglo .)
    PTCOMA          reduce using rule 64 (acceso -> arreglo .)
    CORDER          reduce using rule 64 (acceso -> arreglo .)
    COMA            reduce using rule 64 (acceso -> arreglo .)
    PARDER          reduce using rule 64 (acceso -> arreglo .)

  ! PUNTO           [ reduce using rule 64 (acceso -> arreglo .) ]


state 33
